Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66192

The pos() for a touchevent is incorrect when recieved by a QGraphicsItem which is ignoring transformations

    XMLWordPrintable

Details

    • ed3ed0b9db97a8fab0c03add23228b6b0a96f171 (qtbase/5.11, 21.2.18, 5.11)

    Description

      The pos() for a touchevent is incorrect when recieved by a QGraphicsItem which is ignoring transformations. This is because when the touch points are updated, it is not adjusting the pos by mapping it from the scene as it does for mouse events.

      Attachments

        1. qtbug66192.tar.gz
          19 kB
          Andy Shaw
        2. qtbug66192_log.txt
          0.8 kB
          Friedemann Kleint
        3. qtbug66192_diag.diff
          7 kB
          Friedemann Kleint
        4. readonly.txt
          0.0 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-66192
        # Subject Branch Project Status CR V

        Activity

          People

            kleint Friedemann Kleint
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes